fix(sidebar): fixed bug where sidebar would overlap "Edit" section if screen was small

--- a/src/main/sass/foundation/sidebar.sass
+++ b/src/main/sass/foundation/sidebar.sass
@@ -12,6 +12,8 @@
 
             .post-form
                 text-align: left
+                max-height: 310px
+                overflow: auto
 
                 #result
                     overflow-y: unset !important
@@ -39,6 +41,7 @@
     margin-right: 14px
     position: relative
     transition: margin 0.5s
+    overflow: auto
 
     &Container
         width: auto
